--- a/project/Epidemy_Evolution_Optimalizer/Epidemy_Evolution_Optimalizer.csproj
+++ b/project/Epidemy_Evolution_Optimalizer/Epidemy_Evolution_Optimalizer.csproj
@@ -43,8 +43,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Agent.cs" />
+    <Compile Include="GridMap.cs" />
+    <Compile Include="GridPosition.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TypeAgentAge.cs" />
+    <Compile Include="TypeMoveDirection.cs" />
+    <Compile Include="TypeSIR.cs" />
+    <Compile Include="TypeTileState.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
