--- a/project/Epidemy_Evolution_Optimalizer/Epidemy_Evolution_Optimalizer-ntb-jan.csproj
+++ b/project/Epidemy_Evolution_Optimalizer/Epidemy_Evolution_Optimalizer-ntb-jan.csproj
@@ -46,11 +46,10 @@
     <Compile Include="Agent.cs" />
     <Compile Include="GridMap.cs" />
     <Compile Include="GridPosition.cs" />
-    <Compile Include="MeasuresStrategy.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Simulation.cs" />
     <Compile Include="TypeAgentAge.cs" />
+    <Compile Include="TypeMoveDirection.cs" />
     <Compile Include="TypeSIR.cs" />
     <Compile Include="TypeTileState.cs" />
   </ItemGroup>
